[package]
name = "colo"
version = "0.3.0"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "CLI tool to show and convert colors between various color spaces"
categories = ["command-line-interface"]
repository = "https://github.com/Aloso/colo"
documentation = "https://docs.rs/colo"
homepage = "https://github.com/Aloso/colo"
readme = "README.md"
exclude = ["docs/*"]
edition = "2018"

keywords = ["color", "cli"]
license = "MIT"

[profile.release]
lto = "thin"

[dependencies]
colored = "2.0.0"
clap = "2"
atty = "0.2"
color_space = "^0.5.3"
anyhow = "1"
thiserror = "1"
