[package]
name = "colo"
version = "0.4.1"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "CLI tool to show and convert colors between various color spaces"
categories = ["command-line-interface"]
repository = "https://github.com/Aloso/colo"
documentation = "https://docs.rs/colo"
homepage = "https://github.com/Aloso/colo"
readme = "README.md"
edition = "2018"

keywords = ["color", "cli"]
license = "MIT"

[profile.release]
lto = "thin"

[dependencies]
colored = "2.0.0"
atty = "0.2"
color_space = "^0.5.3"
anyhow = "1"
thiserror = "1"
strsim = "0.10"
fastrand = "1.4"
console = "0.15"

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]
